--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diadal/signin-with-apple",
-  "version": "0.0.9",
+  "version": "0.1.3",
   "description": "Sign In With Apple for Capacitor 3",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -42,10 +42,7 @@
     "clean": "rimraf ./dist",
     "watch": "tsc --watch"
   },
-  "dependencies": {
-    "@types/scriptjs": "^0.0.2",
-    "scriptjs": "^2.5.9"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@capacitor/android": "next",
     "@capacitor/core": "next",
