--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@diadal/signin-with-apple",
-  "version": "0.1.3",
+  "version": "0.1.5",
+  "type": "module",
   "description": "Sign In With Apple for Capacitor 3",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -44,23 +45,23 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@capacitor/android": "next",
-    "@capacitor/core": "next",
-    "@capacitor/docgen": "^0.0.10",
-    "@capacitor/ios": "next",
+    "@capacitor/android": "^5.2.3",
+    "@capacitor/core": "^5.2.3",
+    "@capacitor/docgen": "^0.2.1",
+    "@capacitor/ios": "^5.2.3",
     "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^1.0.1",
+    "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "eslint": "^7.11.0",
-    "prettier": "~2.2.0",
-    "prettier-plugin-java": "~1.0.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.32.0",
-    "swiftlint": "^1.0.1",
-    "typescript": "~4.0.3"
+    "eslint": "^8.47.0",
+    "prettier": "^3.0.2",
+    "prettier-plugin-java": "^2.2.0",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.28.0",
+    "swiftlint": "^1.0.2",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@capacitor/core": "next"
+    "@capacitor/android": "^5.2.3"
   },
   "prettier": "@ionic/prettier-config",
   "swiftlint": "@ionic/swiftlint-config",
